# responseService/src/main/java/com/fh_wedel/response/model/ReviewAnswer.java
@@ -1,0 +1,15 @@
+package com.fh_wedel.response.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class ReviewAnswer {
+    private String questionId;
+    private String answer;
+}
